fix: gap result block single-case

--- a/wp-app/wp-content/themes/attract/modules/result/result.scss
+++ b/wp-app/wp-content/themes/attract/modules/result/result.scss
@@ -63,14 +63,17 @@
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
 
+      @include _1440 {
+        margin-top: 40px;
+      }
+
       @include _1024 {
         grid-template-columns: repeat(2, auto);
         justify-content: center;
-        gap: 40px;
+        column-gap: 40px;
+        row-gap: 20px;
       }
 
-      @include _480 {
-      }
     }
 
     .result-block {
